--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,19 @@
 /* -----  common styles ---- */
 .wrapper {
   padding: 24px;
-  width: 100%; }
-  .wrapper-inner {
-    width: 960px;
-    margin: 0 auto; }
+  width: 1008px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100vh; }
 
 body {
   font-family: 'Arial';
@@ -35,7 +44,6 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
   top: 0;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -165,7 +173,8 @@ p {
       .section-content-right-text .about-studio {
         background: #dcdcdc;
         width: 368px;
-        padding: 23px 18px; }
+        padding: 23px 18px;
+        color: #777777; }
 
 /* ----- / content ---- */
 /* -----   footer ---- */
@@ -173,7 +182,6 @@ p {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between; }
